fixed list-container overflow bug

--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -11,7 +11,7 @@
 }
 
 no-padding {
-  padding: 0;
+  padding: 0 0 0 0;
 }
 
 .overview {
@@ -22,6 +22,7 @@ no-padding {
   padding: 20px 20px 20px 20px;
   display: flex;
   flex-direction: column;
+  height: max-content;
 }
 
 .filter-container {
@@ -64,7 +65,7 @@ no-padding {
   }
 }
 
-.lists {
+.list-container {
   border: 1px black solid;
   border-radius: 10px;
   padding: 20px 10px 20px 10px;
@@ -79,11 +80,18 @@ no-padding {
   background-color: white;
   height: 20px;
   width: 280px;
-  margin: 0;
+  margin-bottom: 20px;
   padding: 16px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   transition: all 0.2s ease-in-out;
+}
+
+.list-card input {
+  font-size: 20px;
+  font-family: Arial;
+
 }
 
 .plus-btn {
